tests/NormalTests/paczka1/fuzzy1/41580108.err
Error in line 2: ernH S831 86,7
Error in line 5: b3RL1 S5p5 p5,6
Error in line 4: ernH S347 22,7
Error in line 9: J8gDXnorwlt S831 46,8
Error in line 10: J8gDXnorwlt A112 7,2
Error in line 22: Ra8y7 S585 63,9
Error in line 23: Ra8y7 A112 19,9
Error in line 24: S347 A112 72,7
Error in line 8: b3RL1 S585 214,0
